prod_snapshot_2015-09-24_1030/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Last_Activity_Datetime__c</fullName>
        <description>Notes the datetime of the last activity on this object.</description>
        <label>Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Review_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Review Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Open_Opportunities__c</fullName>
        <inlineHelpText>Under Construction - Need To Write Formula</inlineHelpText>
        <label>Num Open Opportunities</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prevent_Campaign_Influence_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Campaign Influence Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Value_Open__c</fullName>
        <inlineHelpText>Under Construction - Need To Write Formula</inlineHelpText>
        <label>Total Value Open Opportunities</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Attendees_Checked_In__c</fullName>
        <inlineHelpText>Sum total of checked-in attendees among Eventbrite campaign members.</inlineHelpText>
        <label>Eventbrite Attendees Checked-In</label>
        <summarizedField>CampaignMember.gweb__Eventbrite_Attendees_Checked_In__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Attendees_Registered__c</fullName>
        <inlineHelpText>Total number of registered (ticketed) attendees among Eventbrite campaign members.</inlineHelpText>
        <label>Eventbrite Attendees Registered</label>
        <summarizedField>CampaignMember.gweb__Eventbrite_Ticket_Quantity__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Event_ID__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify an event.</inlineHelpText>
        <label>Eventbrite Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Link__c</fullName>
        <formula>IF(ISNULL(gweb__Eventbrite_Event_ID__c), NULL, HYPERLINK(&apos;http://www.eventbrite.com/myevent?eid=&apos;+ gweb__Eventbrite_Event_ID__c , &apos;View in Eventbrite&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eventbrite Link</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>Lead_Review_Dashboard__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyInActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My InActive Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>EventBrite</fullName>
        <active>true</active>
        <label>EventBrite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey</fullName>
        <active>true</active>
        <label>Survey</label>
    </recordTypes>
</CustomObject>